Fix compilation when NDEBUG is on (ie --enable-debug=no) where kdDebug() returns a kndbgstream. Patch by bug submitter, munged to not enable debugging always.

BUG: 137928

svn path=/branches/KDE/3.5/kdepim/; revision=619524